test/fail_compile/upcased_escapes.tas
.word '\B', '\F', '\N', '\R', '\T', '\V'
.utf32 "\B\F\N\R\T\V"
